Integrate compatibility-guardian and provide basic compatibility testing functionality
- Replace OkHttp with Apache HttpClient
- Create a temporary directory as working directory for downloaded artifacts
- Attempt locating artifacts in local maven repository default location
- Test classes (domain objects, listeners etc) loaded per Hazelcast version classloader
- ProxyInvocationHandler made Serializable to allow for serialization of test user objects
- Enhancements in proxying for parametrized collection return types, whitelisting classes which
must be subclass-proxied or not proxied at all (eg event objects are reconstructed at target
classloader)
- Introduces compatibility-tests maven profile and a BasicMapCompatibilityTest