@@ -44,6 +44,7 @@
 
         <log4j2.version>2.3</log4j2.version>
         <mockito.all.version>1.10.19</mockito.all.version>
+        <bytebuddy.version>1.6.12</bytebuddy.version>
     </properties>
 
     <licenses>
@@ -588,6 +589,40 @@
             </build>
         </profile>
 
+        <profile>
+            <id>compatibility-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <parallel>none</parallel>
+                            <argLine>
+                                -Xms512m -Xmx2G -XX:MaxPermSize=256M
+                                -Dhazelcast.phone.home.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=log4j2
+                                -Dhazelcast.test.compatibility=true
+                                -Dlog4j.skipJansi=true
+                            </argLine>
+                            <includes>
+                                <include>**/**.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/jsr/**.java</exclude>
+                            </excludes>
+                            <groups>
+                                com.hazelcast.test.annotation.CompatibilityTest
+                            </groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
     <dependencies>
@@ -623,6 +658,19 @@
             <artifactId>annotations</artifactId>
             <version>3.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- Required for compatibility testing -->
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${bytebuddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>${bytebuddy.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
